<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ovh.crow.guesswho.MainActivity"
    android:background="@color/app_background">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/logo" />

    <Button
        android:text="@string/btn_new_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:textSize="30sp"
        android:width="200dp"
        android:id="@+id/btn_new_game"
        android:textColor="@color/black"
        android:onClick="onNewGame"/>

    <Button
        android:text="@string/btn_join_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:textSize="30sp"
        android:width="200dp"
        android:id="@+id/btn_join_game"
        android:textColor="@color/black"
        android:onClick="onJoinGame"
        android:layout_below="@+id/btn_new_game"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/btn_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:textSize="30sp"
        android:width="200dp"
        android:id="@+id/btn_about"
        android:textColor="@color/black"
        android:onClick="onAbout"
        android:layout_below="@+id/btn_join_game"
        android:layout_centerHorizontal="true" />



</RelativeLayout>


