<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ovh.crow.guesswho.PlayingActivity">

    <GridView
        android:id="@+id/boardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/spinnerArea"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:clickable="true"
        android:columnWidth="90dp"
        android:contextClickable="true"
        android:horizontalSpacing="10dp"
        android:longClickable="true"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth"
        android:verticalSpacing="5dp" />

    <Spinner
        android:id="@+id/spinnerArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_above="@+id/spinnerAttribute"
        android:layout_alignParentStart="true"/>

    <Spinner
        android:id="@+id/spinnerAttribute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/askBtn"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/askBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ask_question"
        android:onClick="onSendQuestion"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btn_myPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_my_player"
        android:onClick="onShowMyPlayer"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="false"
        android:layout_marginLeft="10dp"/>

    <Button
        android:id="@+id/btn_gamestats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_gamestats"
        android:onClick="onShowGameStats"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="false"
        android:layout_marginEnd="10dp"/>

</RelativeLayout>
